# embed-log

./: .gitignore  AGENTS.md  BACKEND_PERFORMANCE_PLAN.md  BACKEND_REFACTOR.md  BENCHMARK_PLAN.md  BENCHMARK_REVIEW.md  CBOR_PARSER_SUPPORT.md  CLI_SIMPLIFY_PLAN.md  CURATED_DEMO_AGENT_PLAN.md  CURATED_DEMO_AGENT_PROMPT.md  CUSTOM_PARSERS_PLAN.md  Cargo.toml  DEVELOPMENT.md  DIRECTORY_GUIDE.md  FRONTEND.md  FRONTEND_REFACTOR.md  LICENSE  MERGE.md  README.md  RELEASE_AND_UPDATE.md  SAMPLE_COMMANDS.md  agent_benchmark_plan.md  agents_improvement_plan.md  backlog.md  config-samples  copy-compact-mode-plan.md  demo-session.html  demo.events.yml  demo.sh  demo.yml  demo_traffic.py  embed-log.commands.yml  embed-log.demo.yml  embed-log.yml  event-detection-plan.md  features.md  flake.nix  install.ps1  install.sh  justfile  (+12 more)
.claude-plugin/: marketplace.json  plugin.json
backend/: _install_source.py  _version.py  app.py  cli.py  config.py  demo.py  file_tail_udp.py  frontend_plugins.py  log_client.py  parse.py  server.py  slice.py  tx_client.py
benchmarks/: serial_stress.py
config-samples/: annotated-full-config.yml  double_uart_file_two_tabs.yml  double_uart_file_udp_coap_three_tabs.yml  double_uart_minimal_single_tab.yml  double_uart_network_two_tabs.yml  double_uart_single_tab.yml  double_uart_udp_coap_two_tabs.yml  double_uart_udp_multi_baud_two_tabs.yml  double_uart_udp_two_tabs.yml  dual_uart_zephyr_dict.yml  gwl_lnk121_dict.yml  multi-tab-multi-baud.yml  network-capture.yml  reference_full_annotated.yml  single-tab-dual-pane.yml  single_file_single_tab.yml  single_network_single_tab.yml  single_pcap_udp_single_tab.yml  single_uart_single_tab.yml  three-tab-uart-file-udp-coap.yml  three_udp_cbor_two_tabs.yml
crates/embed-log-cli/: Cargo.toml  build.rs
crates/embed-log-cli/src/: config.rs  demo_config.rs  main.rs  util.rs
crates/embed-log-cli/src/commands/: misc.rs  mod.rs  run.rs  sessions.rs  ui.rs
crates/embed-log-core/: Cargo.toml
crates/embed-log-core/src/: clock.rs  demo.rs  frontend_assets.rs  lib.rs  models.rs  naming.rs  onboarding.rs  postprocess.rs
crates/embed-log-core/src/config/: commands.rs  events.rs  loader.rs  mod.rs  models.rs  paths.rs
crates/embed-log-core/src/net/: control_ws.rs  forward_server.rs  inject_server.rs  mod.rs  ws_server.rs
crates/embed-log-core/src/parsers/: cbor.rs  hex_coap.rs  mod.rs  slip_coap.rs  text.rs  traits.rs  zephyr_dict.rs
crates/embed-log-core/src/runtime/: mod.rs  server.rs
crates/embed-log-core/src/session/: exporter.rs  log_parse.rs  manager.rs  mod.rs
crates/embed-log-core/src/sources/: file.rs  mod.rs  network.rs  traits.rs  uart.rs  udp.rs
crates/embed-log-tauri/: Cargo.toml  tauri.conf.json
crates/embed-log-tauri/src/: lib.rs  main.rs
crates/embed-log-tui/: Cargo.toml
crates/embed-log-tui/src/: app.rs  client.rs  draw.rs  events.rs  input.rs  keys.rs  lib.rs  lines.rs  main.rs  protocol.rs  selection.rs  state.rs
docs/: AGENTS.md  API.md  ARCHITECTURE.md  BACKEND.md  BACKEND_BACKLOG.md  BENCHMARK.md  BENCHMARKING.md  CURATED_DEMO_NOTE.md  DEMOS.md  DIRECTORY_GUIDE.md  FRONTEND.md  FRONTEND_BACKLOG.md  FRONTEND_PLUGINS.md  INSTALL.md  MERGE_LOGS.md  README.md  SAMPLE_COMMANDS.md  SESSIONS_CLI_IMPROVEMENTS_PLAN.md  SESSIONS_CLI_SKILL.md  TESTING.md  TEST_MARKERS_AGENT.md  agent-capabilities.md  api-status.md  architecture.md  automation-agent-plan.md  cli.md  cli_log_dir_config_plan.md  cli_onboarding_update_todo.md  configuration.md  development.md  fix_ui_virtualization_plan.md  getting-up-to-speed.md  hardware-ci.md  improve_ui_performance.md  index.md  non-session-roadmap.md  quickstart.md  releasing.md  tauri.md  tui.md  (+1 more)
examples/: embed-log.yml
frontend/: ansi.js  events.js  export.js  fontsize.js  import.js  index.html  lines.js  main.js  onboarding.js  persist.js  plugin-hex-coap.js  pluginRuntime.js  postprocess.js  profile.js  renderPane.js  renderToolbar.js  selection.js  settings.js  state.js  tabcreate.js  tabs.js  themes.js  toolbar.html  tsparse.js  ui.js  viewer.css  ws.js
mcp/: _mcp_stdio.py  device_control_server.py  log_intel_server.py
scripts/: package-cli.ps1  package-cli.sh  test-backend.sh  test-ui.sh  test_file_watch_integration.py  test_tui_integration.py  test_update_integration.py
sdk/: __init__.py  _forward.py  _inject.py  _models.py  _watcher.py
sdk/python/: README.md  pyproject.toml
sdk/python/embed_log_sdk/: __init__.py  client.py  config.py  exceptions.py  models.py  watcher.py
sdk/python/examples/: forward_subscribe.py  inject_log.py  tx_write.py  watcher.yml  watcher_run.py
sdk/python/tests/: test_backend_hardware_stm32g0_multi_uart.py  test_backend_hardware_uart.py  test_client.py  test_config.py  test_e2e.py  test_events.py  test_models.py  test_watcher.py
tests/: test_app_parse_source.py  test_cbor_datagram_parser.py  test_cbor_integration.py  test_cli_bundled_resources.py  test_cli_config_resolution.py  test_cli_create_config.py  test_cli_demo_ports.py  test_cli_dir_alias.py  test_cli_doctor.py  test_cli_env_config.py  test_cli_markers.py  test_cli_onboarding_update.py  test_cli_parser.py  test_cli_run_timestamp_mode.py  test_cli_session_discovery.py  test_cli_sessions_export.py  test_cli_snippet.py  test_cli_update.py  test_cli_util.py  test_cli_version.py  test_config_loader.py  test_deterministic_demo_traffic.py  test_file_tail_udp.py  test_merge_logs.py  test_network_capture_build.py  test_network_capture_config.py  test_packet_normalizer.py  test_parse.py  test_parsed_source.py  test_pyproject_packaging.py  test_queue_stats.py  test_runtime_export_and_uart.py  test_runtime_timestamp_mode.py  test_sdk_e2e.py  test_session_components.py  test_sessions.py  (+3 more)
tests-ui/: DETERMINISTIC_DEMO_PLAN.md  DETERMINISTIC_TESTS_PLAN.md  README.md  TEST_PLAN.md  config-parity.events.yml  config-regression.yml  global-teardown.js  package-lock.json  package.json  parity-inventory.json  playwright.config.js  playwright.parity.config.js  playwright.regression.config.js  regression-categories.mjs  regression-inventory.json  rust-demo-server.mjs
(+128 files in other folders)
