[workspace]
resolver = "2"
members = [
    "crates/embed-log-core",
    "crates/embed-log-cli",
    "crates/embed-log-tauri",
    "crates/embed-log-tui",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/embedlab-tech/embed-log"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
anyhow = "1"
thiserror = "2"
slug = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"

# Core + TUI crates (used by CLI and Tauri)
embed-log-core = { path = "crates/embed-log-core" }
embed-log-tui = { path = "crates/embed-log-tui" }
