[project]
name = "embed-log"
version = "1.1.5"
description = "Serial log server for embedded device CI with live browser UI"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "aiohttp>=3.9",
    "PyYAML>=6.0",
    "cbor2>=5.6",
    "watchdog>=4.0",
]

[project.scripts]
embed-log = "backend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "frontend"
"utils" = "utils"

[tool.hatch.build.targets.sdist]
include = [
    "backend/**",
    "frontend/**",
    "utils/**",
    "examples/**",
    "embed-log.demo.yml",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv]
package = false
