[package]
name = "embed-log-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "embed-log"
path = "src/main.rs"

[dependencies]
embed-log-core.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serialport = "4"

[dependencies.embed-log-tui]
workspace = true
optional = true

[features]
default = ["tui"]
tui = ["dep:embed-log-tui"]

[dev-dependencies]
serde_yaml.workspace = true
