[package]
name = "embed-log-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "embed_log_tui"
path = "src/lib.rs"

[[bin]]
name = "embed-log-tui"
path = "src/main.rs"

[dependencies]
embed-log-core.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
ratatui = "0.28"
crossterm = "0.28"
arboard = "3"
tokio-tungstenite = "0.24"
url = "2"
regex = "1"
